# SHIELD-AA-Weather-Risk-vercel

./: .gitignore  .vercelignore  README.md  app.py  auto_download_bts.py  check.py  combine_all.py  docker-compose.weather.yml  filter_to_scope.py  package-lock.json  pyproject.toml  requirements.txt  run_build_dfw_master.py  run_build_weather_delay_dataset.py  run_enrich_weather_archive.py  run_forecast_api.py  run_forecast_export.py  run_integrated_risk.py  run_ml_risk.py  run_multitask.py  run_pipeline.py  run_threshold_sweep.py  run_train_weather_delay_xgb.py  run_weather_consumer.py  run_weather_producer.py  vercel.json
api/: index.py
data/processed/: route_stats.csv  shield_xgb_model.pkl
data/processed/weather_delay_xgb_100k/: weather_delay_xgb_feature_importance.csv  weather_delay_xgb_metrics.json  weather_delay_xgb_pipeline.joblib
data/processed/weather_delay_xgb_20k/: weather_delay_xgb_feature_importance.csv  weather_delay_xgb_metrics.json  weather_delay_xgb_pipeline.joblib
data/raw/noaa_global_hourly_cache/: isd-history.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/api/: client.ts
notebooks/: 02_cleaning.ipynb  03_airport_risk_scoring.ipynb  04_pair_risk_scoring.ipynb  05_pilot_duty_constraints.ipynb  06_csp_solver.ipynb
src/shield_pipeline/: __init__.py  bts_schema.py  config.py  csp.py  dfw_master.py  evaluation.py  features.py  integrated_risk.py  io.py  ml_risk.py  multitask.py  pipeline.py  scoring.py  thresholds.py  weather_delay_dataset.py  weather_delay_runtime.py  weather_delay_xgb.py  weather_enrichment.py
(+22 files in other folders)
